--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Algum Nome</title>
+    <title>Calm Click</title>
 
     <link rel="stylesheet" href="css/main.css">
     <script rel="text/javascript" src="javascript/main.js"></script>
