Teste github pages

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <input type="text" placeholder="Digite seu nome!" id="myInput">
                 <button id="salvar" class="btn" onclick="SalvarRecord()">Save</button>
                 <ol id="recordSalvo">
-                    <li class="recordLinha"><span>Nome</span>   <span>Pontuação</span></li>
+                    <li class="recordLinha"><span>Nome-</span>   <span>Pontuação</span></li>
                     <li class="recordLinha"><span>Nome</span>   <span>Pontuação</span></li>
                     <li class="recordLinha"><span>Nome</span>   <span>Pontuação</span></li>
                     <li class="recordLinha"><span>Nome</span>   <span>Pontuação</span></li>
