Add function and fix bug
- Fix the dropdown button bug
- Add a function to add hearts

--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <p>Speed: 1/<span id="velocidade">1000</span>ms</p>
         <ul class="vidas"> 
             <li>Vidas:</li>
-            <li class="coracoes"><img id="coracao1" src="imagens/coracao.png" alt="coracao"></li>
-            <li class="coracoes"><img id="coracao2" src="imagens/coracao.png" alt="coracao"></li>
-            <li class="coracoes"><img id="coracao3" src="imagens/coracao.png" alt="coracao"></li>
+            <li class="coracoes" id="ItemHeart1"></li>
+            <li class="coracoes" id="ItemHeart2" ></li>
+            <li class="coracoes" id="ItemHeart3"></li>
         </ul>
     </header>
     <div class="areaInteracao">
