--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
                 <input type="text" placeholder="Type your name" id="nameInput">
                 <button id="btnSave" class="btn" onclick="RecordPoints()">Save</button>
                 <ol>
-                    <li><span>Nome</span>   <span>Pontuação</span></li>
-                    <li><span>Nome</span>   <span>Pontuação</span></li>
-                    <li><span>Nome</span>   <span>Pontuação</span></li>
-                    <li><span>Nome</span>   <span>Pontuação</span></li>
-                    <li><span>Nome</span>   <span>Pontuação</span></li>
+                    <li><span>Name</span>   <span>Points</span></li>
+                    <li><span>Name</span>   <span>Points</span></li>
+                    <li><span>Name</span>   <span>Points</span></li>
+                    <li><span>Name</span>   <span>Points</span></li>
+                    <li><span>Name</span>   <span>Points</span></li>
                 </ol>
             </div>
         </div>
