--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Calm Click</title>
 
     <link rel="stylesheet" href="css/main.css">
+    <script src="javascript/phaser.min.js"></script>
     <script rel="text/javascript" src="javascript/main.js"></script>
 </head>
 <body>
@@ -42,12 +43,8 @@
             <li class="hearts" id="ItemHeart3"></li>
         </ul>
     </header>
-    <div class="interactionArea">
-        <div id="game" class="gameArea">
-        </div>
-        <div class="darkOverlay" id="darkBackground">
-            <img id="btnPlay" src="images/play.png" alt="play" onclick="StartGame()">
-        </div>
+    <div id="interactionArea">
+        
     </div>
 </body>
 </html>
